improve js -> navbar fixed 'closed' stuck

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ footer p {
 
 /*--------------- Testing SECTION ---------------*/
 
-#menu-icon {
+#menu-bar {
   position: fixed;
   cursor: pointer;
   padding: 15px;
@@ -129,15 +129,15 @@ footer p {
   }
 }
 
-#menu-icon.show {
+#menu-bar.show {
   transform: translateY(0);
 }
 
-#menu-icon.hide {
+#menu-bar.hide {
   transform: translateY(-200%);
 }
 
-#hamburger-menu {
+#menu-hamburger {
   display: block;
   background-color: #333;
   color: #fff;
@@ -151,7 +151,7 @@ footer p {
   margin-top: 10vh;
 }
 
-#hamburger-menu a {
+#menu-hamburger a {
   display: block;
   padding: 15px;
   text-decoration: none;
